tests/models/enum/named/i32/fail/min_length.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(min_length = 2)]
        i32
    ),
}
fn main() {}
